# lidar-slam-eval

./: .gitattributes  .gitignore  README.md  outdoor_tree.txt  resultats_tree.txt
resultats/: README.md
resultats/Outdoor/: plan_outdoor.yaml  slam_config_outdoor.yaml
resultats/Outdoor/Par_defaut/maps/: defaut_planes.pcd
resultats/Outdoor/ego_motion/metriques_evo/: metrics_local.xlsx
resultats/Outdoor/ke/profil_leger/: slam_config_outdoor.yaml
resultats/Outdoor/ke/profil_robuste/: slam_config_outdoor.yaml
resultats/Outdoor/undistortion/metriques_evo/: metrics_local.xlsx
resultats/indoor/: checkpoints.json  plan_indoor.yaml  report.html  report.json  slam_config_indoor.yaml
resultats/indoor/ER_ICP_LM_Iter/lent-6-20/: lent-6-20.json
resultats/indoor/ER_ICP_LM_Iter/metriques_confidence/: computation_time_lent-6-20.csv  computation_time_rapide-3-10.csv  overlap_par-defaut-4-15.csv
resultats/indoor/ER_ICP_LM_Iter/metriques_evo/: metrics_local.xlsx
resultats/indoor/ER_ICP_LM_Iter/par-defaut-4-15/: par-defaut-4-15.json
resultats/indoor/ER_ICP_LM_Iter/rapide-3-10/: rapide-3-10.json
resultats/indoor/dirs/: INDOOR_nouv.txt
scripts_de_test/: README.md  collect_confidence_metrics.py  collect_summaries.py  compute_evo_metrics_no_align_test.py  extract_trajectories.py  extract_trajectory_plots.py  run_plots_confiance.sh  slam_orchestrator.py  summarize_by_metric.py
scripts_de_test/odom_csv_extractor/: package.xml  setup.cfg  setup.py
scripts_de_test/odom_csv_extractor/odom_csv_extractor/: __init__.py  extract_to_csv.py
(+792 files in other folders)
